--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -15,7 +15,7 @@ body {
 .vert-text h1 {
   padding: 0;
   margin: 0;
-  font-size: 4.5em;
+  font-size: 3.5em;
   font-weight: 700;
 }
 
@@ -111,7 +111,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg.jpg) no-repeat center center fixed; 
+  background: url(../img/Beach.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -151,11 +151,11 @@ i.service-icon {
 /* Callout */
 
 .callout {
-  color: #ffffff;
+  /* color: #ffffff; */
   display: table;
   height: 400px;
   width: 100%;
-  background: url(../img/callout.jpg) no-repeat center center fixed; 
+  background: url(../img/CircuitBoard.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -181,7 +181,7 @@ i.service-icon {
 
 .call-to-action {
   color: #ffffff;
-  background: #0a5175;
+  background: #7fbbda;
   padding: 50px 0;
 }
 
@@ -226,7 +226,7 @@ i.scroll:hover {
   }
 
   .callout {
-	background: url(../img/callout.jpg) no-repeat center center scroll; 
+	background: url(../img/CiruitBoard.jpg) no-repeat center center scroll; 
   }
 
   .map {
