--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -111,7 +111,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/Beach.jpg) no-repeat center center fixed; 
+  background: url(http://www.jaketsuyemura.com/img/Beach.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -155,7 +155,7 @@ i.service-icon {
   display: table;
   height: 400px;
   width: 100%;
-  background: url(../img/CircuitBoard.jpg) no-repeat center center fixed; 
+  background: url(http://www.jaketsuyemura.com/img/CircuitBoard.JPG) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
