Tweak Mobile Displays

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -289,7 +289,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #308AFD;
+  color: #1938DB;
   text-decoration: none;
 }
 a:hover,
@@ -750,7 +750,7 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 65em;
   }
 }
 .container-fluid {
