--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -222,11 +222,11 @@ i.scroll:hover {
 @media (max-width: 768px) {
 	
   .header {
-	background: url(../img/bg.jpg) no-repeat center center scroll; 
+	background: url(../img/Beach.jpg) no-repeat center center scroll; 
   }
 
   .callout {
-	background: url(../img/callout.jpg) no-repeat center center scroll; 
+	background: url(../img/CircuitBoard.JPG) no-repeat center center scroll; 
   }
 
   .map {
